--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
 <head>
    
     <title>CAFE CRAVE</title>
+    <p >Fresh Brews • Happy Moods</p>
 </head>
 <body>
+    <nav>
+        <a href="./pages/menu.html">Menu</a>
+        <a href="./pages/contact.html">Contact</a>
+        <a href="./pages/about.html">About</a>
+    </nav>
+
     
 </body>
 </html>
