--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,12 @@
     <title>Contact page</title>
 </head>
 <body>
+     <nav>
+        <a href="../index.html">Index</a>
+        <a href="../pages/menu.html">Menu</a>
+        <a href="../pages/about.html">About</a>
+    </nav>
+
     
 </body>
 </html>
