--- a/pages/about.html
+++ b/pages/about.html
@@ -5,6 +5,12 @@
     <title>About page</title>
 </head>
 <body>
+     <nav>
+       <a href="../index.html">Index</a>
+       <a href="../pages/menu.html">About</a>
+       <a href="../pages/contact.html">Contact</a>
+    </nav>
+
     
 </body>
 </html>
