--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <title>CAFE CRAVE</title>
     <p >Fresh Brews • Happy Moods</p>
 </head>
-<body>
+<body >
     <nav>
         <a href="./pages/menu.html">Menu</a>
         <a href="./pages/contact.html">Contact</a>
         <a href="./pages/about.html">About</a>
     </nav>
 
-    
+    <section>
+  <h1><b><i>Welcome to Café Crave</i></b>></h1>
+  <img src="./images/coffee2.jpeg" height="400px">
+  <p><i>Where every sip tells a story....!</i></p>
+  <a href="./pages/menu.html" class="btn">View Menu</a>
+</section>
 </body>
 </html>
