--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
     </nav>
 
     <section>
-  <h1><b><i>Welcome to Café Crave</i></b>></h1>
+  <h1><b><i>Welcome to Café Crave</i></b></h1>
   <img src="./images/coffee2.jpeg" height="400px">
   <p><i>Where every sip tells a story....!</i></p>
   <a href="./pages/menu.html" class="btn">View Menu</a>
-</section>
+</section><br/><br/>
+
+<footer>
+  <p>© 2026 Café Crave. All Rights Reserved.</p>
+</footer>
+
 </body>
 </html>
