--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
    
     <title>CAFE CRAVE</title>
-    <p >Fresh Brews • Happy Moods</p>
+   
 </head>
 <body >
+    <header>
+  <h1>Café Crave ☕</h1>
+  <p>Fresh Brews • Happy Moods</p>
+</header>
+
     <nav>
         <a href="./pages/menu.html">Menu</a>
         <a href="./pages/contact.html">Contact</a>
