--- a/pages/menu.html
+++ b/pages/menu.html
@@ -5,6 +5,10 @@
     <title>Menu page</title>
 </head>
 <body>
+    <header>
+  <h1>Café Crave ☕</h1>
+  <p>Fresh Brews • Happy Moods</p>
+</header>
      <nav>
        <a href="../index.html">Index</a>
        <a href="../pages/about.html">About</a>
