menu items added

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -15,6 +15,40 @@
        <a href="../pages/contact.html">Contact</a>
     </nav>
 
+    <section class="menu">
+  <h2>Our Menu</h2>
+
+  <div class="menu-item">
+    <h3>Espresso</h3>
+    <p>Strong & rich coffee shot</p>
+    <span>₹120</span>
+  </div>
+
+  <div class="menu-item">
+    <h3>Cappuccino</h3>
+    <p>Coffee with steamed milk foam</p>
+    <span>₹150</span>
+  </div>
+
+  <div class="menu-item">
+    <h3>Cold Coffee</h3>
+    <p>Chilled coffee with ice cream</p>
+    <span>₹180</span>
+  </div>
+
+  <div class="menu-item">
+    <h3>Chocolate Muffin</h3>
+    <p>Soft & freshly baked</p>
+    <span>₹90</span>
+  </div>
+
+  <div class="menu-item">
+    <h3>Cheese Sandwich</h3>
+    <p>Grilled sandwich with cheese</p>
+    <span>₹130</span>
+  </div>
+</section>
+
     
 </body>
 </html>
