--- a/pages/menu.html
+++ b/pages/menu.html
@@ -20,30 +20,35 @@
 
   <div class="menu-item">
     <h3>Espresso</h3>
+    <img src="../images/Espresso.jpeg">
     <p>Strong & rich coffee shot</p>
     <span>₹120</span>
   </div>
 
   <div class="menu-item">
     <h3>Cappuccino</h3>
+    <img src="../images/cappuccino.jpeg">
     <p>Coffee with steamed milk foam</p>
     <span>₹150</span>
   </div>
 
   <div class="menu-item">
     <h3>Cold Coffee</h3>
+    <img src="../images/Cold Coffee.jpeg">
     <p>Chilled coffee with ice cream</p>
     <span>₹180</span>
   </div>
 
   <div class="menu-item">
     <h3>Chocolate Muffin</h3>
+    <img src="../images/Chocolate Muffin.jpeg">
     <p>Soft & freshly baked</p>
     <span>₹90</span>
   </div>
 
   <div class="menu-item">
     <h3>Cheese Sandwich</h3>
+    <img src="../images/heese Sandwich.jpeg">
     <p>Grilled sandwich with cheese</p>
     <span>₹130</span>
   </div>
