--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,11 @@
     <title>Contact page</title>
 </head>
 <body>
+    <header>
+  <h1>Café Crave ☕</h1>
+  <p>Fresh Brews • Happy Moods</p>
+</header>
+
      <nav>
         <a href="../index.html">Index</a>
         <a href="../pages/menu.html">Menu</a>
