--- a/pages/contact.html
+++ b/pages/contact.html
@@ -16,6 +16,21 @@
         <a href="../pages/about.html">About</a>
     </nav>
 
+    <section class="contact">
+  <h2>Contact Us</h2>
+  <p>We’d love to hear from you!</p>
+
+  <form>
+    <input type="text" placeholder="Your Name" required><br/><br/>
+    <input type="email" placeholder="Your Email" required><br/><br/>
+    <textarea placeholder="Your Message" rows="5" required></textarea><br/><br/>
+    <button type="submit">Send Message</button>
+  </form>
+
+  
+</section>
+
+
     
 </body>
 </html>
