contact info added

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -27,6 +27,13 @@
     <button type="submit">Send Message</button>
   </form>
 
+  <div class="contact-info">
+    
+    <p>Address: <a href="https://maps.app.goo.gl/YxFQrbztrt97BTGt9" target="_blank">MG Road, Pune</a></p>
+    <p>Phone: <a href="tel:+91 98765 43210">+91 98765 43210</a></p>
+    <p>Email: <a href="mail to:cafecrave@gmail.com">cafecrave@gmail.com</a></p>
+  </div>
+
   
 </section>
 
