--- a/pages/about.html
+++ b/pages/about.html
@@ -5,6 +5,11 @@
     <title>About page</title>
 </head>
 <body>
+
+    <header>
+  <h1>Café Crave ☕</h1>
+  <p class="tagline">Fresh Brews • Happy Moods</p>
+</header>
      <nav>
        <a href="../index.html">Index</a>
        <a href="../pages/menu.html">About</a>
