about us info added

--- a/pages/about.html
+++ b/pages/about.html
@@ -10,11 +10,36 @@
   <h1>Café Crave ☕</h1>
   <p class="tagline">Fresh Brews • Happy Moods</p>
 </header>
+
      <nav>
        <a href="../index.html">Index</a>
        <a href="../pages/menu.html">About</a>
        <a href="../pages/contact.html">Contact</a>
     </nav>
+
+    <section class="about">
+  <h2>About Café Crave</h2>
+
+  <p>
+    Café Crave is a modern café designed for coffee lovers who enjoy
+    quality, comfort, and great taste. We serve freshly brewed coffee,
+    delicious snacks, and desserts in a warm and friendly environment.
+  </p>
+
+  <p>
+    Our mission is to provide high-quality beverages made from the finest
+    ingredients while creating a relaxing space for friends, students,
+    and professionals.
+  </p>
+
+  <h3>Why Choose Us?</h3>
+  <ul>
+    <li>☕ Freshly brewed coffee</li>
+    <li>🍰 Tasty snacks & desserts</li>
+    <li>🧼 Clean and hygienic environment</li>
+    <li>😊 Friendly customer service</li>
+  </ul>
+    </section>
 
     
 </body>
